src/validation/tests/snapshots/rusty__validation__tests__statement_validation_tests__missing_wstring_compare_function_causes_error.snap
---
source: src/validation/tests/statement_validation_tests.rs
expression: "&diagnostics"
---
error[E073]: Missing compare function 'FUNCTION WSTRING_EQUAL : BOOL VAR_INPUT a,b : WSTRING; END_VAR ...'.
  ┌─ <internal>:3:13
  │
3 │             "a" =  "b"; // missing compare function :-(
  │             ^^^^^^^^^^ Missing compare function 'FUNCTION WSTRING_EQUAL : BOOL VAR_INPUT a,b : WSTRING; END_VAR ...'.

error[E073]: Missing compare function 'FUNCTION WSTRING_EQUAL : BOOL VAR_INPUT a,b : WSTRING; END_VAR ...'.
  ┌─ <internal>:4:13
  │
4 │             "a" <> "b"; // missing compare function :-(
  │             ^^^^^^^^^^ Missing compare function 'FUNCTION WSTRING_EQUAL : BOOL VAR_INPUT a,b : WSTRING; END_VAR ...'.

error[E073]: Missing compare function 'FUNCTION WSTRING_LESS : BOOL VAR_INPUT a,b : WSTRING; END_VAR ...'.
  ┌─ <internal>:5:13
  │
5 │             "a" <  "b"; // missing compare function :-(
  │             ^^^^^^^^^^ Missing compare function 'FUNCTION WSTRING_LESS : BOOL VAR_INPUT a,b : WSTRING; END_VAR ...'.

error[E073]: Missing compare function 'FUNCTION WSTRING_GREATER : BOOL VAR_INPUT a,b : WSTRING; END_VAR ...'.
  ┌─ <internal>:6:13
  │
6 │             "a" >  "b"; // missing compare function :-(
  │             ^^^^^^^^^^ Missing compare function 'FUNCTION WSTRING_GREATER : BOOL VAR_INPUT a,b : WSTRING; END_VAR ...'.

error[E073]: Missing compare function 'FUNCTION WSTRING_LESS : BOOL VAR_INPUT a,b : WSTRING; END_VAR ...'.
  ┌─ <internal>:7:13
  │
7 │             "a" <= "b"; // missing compare function :-(
  │             ^^^^^^^^^^ Missing compare function 'FUNCTION WSTRING_LESS : BOOL VAR_INPUT a,b : WSTRING; END_VAR ...'.

error[E073]: Missing compare function 'FUNCTION WSTRING_EQUAL : BOOL VAR_INPUT a,b : WSTRING; END_VAR ...'.
  ┌─ <internal>:7:13
  │
7 │             "a" <= "b"; // missing compare function :-(
  │             ^^^^^^^^^^ Missing compare function 'FUNCTION WSTRING_EQUAL : BOOL VAR_INPUT a,b : WSTRING; END_VAR ...'.

error[E073]: Missing compare function 'FUNCTION WSTRING_GREATER : BOOL VAR_INPUT a,b : WSTRING; END_VAR ...'.
  ┌─ <internal>:8:13
  │
8 │             "a" >= "b"; // missing compare function :-(
  │             ^^^^^^^^^^ Missing compare function 'FUNCTION WSTRING_GREATER : BOOL VAR_INPUT a,b : WSTRING; END_VAR ...'.

error[E073]: Missing compare function 'FUNCTION WSTRING_EQUAL : BOOL VAR_INPUT a,b : WSTRING; END_VAR ...'.
  ┌─ <internal>:8:13
  │
8 │             "a" >= "b"; // missing compare function :-(
  │             ^^^^^^^^^^ Missing compare function 'FUNCTION WSTRING_EQUAL : BOOL VAR_INPUT a,b : WSTRING; END_VAR ...'.
